# nonebot-plugin-gold-price

./: README.md  pyproject.toml
nonebot_plugin_gold_price/: __init__.py  gold_price.py
