[project]
name = "nonebot-plugin-gold-price"
version = "0.1.0"
description = "用于查询实时金价、绘制历史金价的NoneBot2插件"
authors = [
    { name = "newcovid", email = "280310454@qq.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
keywords = ["nonebot", "gold", "finance", "analysis"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=11.3.0",
    "requests>=2.28.0",
    "matplotlib>=3.6.0",
    "nonebot-plugin-apscheduler>=0.3.0",
    "pydantic>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/newcovid/nonebot-plugin-gold-price"
Documentation = "https://github.com/newcovid/nonebot-plugin-gold-price#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugins.gold_price_plugin"]
include-package-data = true
